--- a/src/pages/snippets/[slug].astro
+++ b/src/pages/snippets/[slug].astro
@@ -16,7 +16,7 @@ export const getStaticPaths = (async () => {
   }));
 }) satisfies GetStaticPaths;
 
-const { slug } = Astro.params;
+// const { slug } = Astro.params;
 
 type Props = {
   snippet: CollectionEntry<"snippets">;
