--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -57,6 +57,16 @@ dd {
     margin-block: 0;
 }
 
+/* Basic list styles */
+ul,
+ol {
+    list-style: inside;
+
+    li {
+        margin-left: 1rem;
+    }
+}
+
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
