--- a/src/components/modal/baseComponents/Modal.astro
+++ b/src/components/modal/baseComponents/Modal.astro
@@ -32,6 +32,9 @@ const { modalClass, openId, closeId } = Astro.props;
   openButton.addEventListener("click", () => {
     console.log("openButton clicked");
     modal.showModal();
+
+    const searchInput = modal.querySelector("input");
+    searchInput.focus();
   });
 
   closeButton.addEventListener("click", () => {
