--- a/src/pages/blog/[page].astro
+++ b/src/pages/blog/[page].astro
@@ -70,6 +70,15 @@ const pageTitle = "Blog";
 
     <SimplePagination page={page} baseUrl="blog" />
   </BlogLayout>
-
-  <style></style>
 </FullScreenLayout>
+
+<style>
+  .blog-list,
+  .tag-list {
+    list-style: none;
+  }
+
+  li {
+    margin-left: 0;
+  }
+</style>
