--- a/src/components/modal/baseComponents/OpenButton.astro
+++ b/src/components/modal/baseComponents/OpenButton.astro
@@ -8,6 +8,8 @@ const { class: className, ...rest } = Astro.props;
 
 <style>
   button {
+    display: flex;
+    align-items: center;
     border-color: transparent;
     background: transparent;
     color: inherit;
