--- a/src/components/modal/SearchModal.astro
+++ b/src/components/modal/SearchModal.astro
@@ -10,11 +10,9 @@ import CloseButton from "./baseComponents/CloseButton.astro";
 import Search from "astro-pagefind/components/Search";
 ---
 
-<OpenButton id="openSearch" class="text-xl"
-  >
+<OpenButton id="openSearch">
   <Icon name="tabler:search" />
-  </OpenButton
->
+</OpenButton>
 <Modal openId="openSearch" closeId="closeSearch">
   <CloseButton
     id="closeSearch"
