--- a/src/styles/blogLayout.css
+++ b/src/styles/blogLayout.css
@@ -150,3 +150,35 @@ h2 {
 p:has(img) {
     max-width: var(--popout-max-width);
 }
+
+.blog-layout a {
+    text-decoration: underline dotted;
+    text-underline-offset: 4px;
+    transition: color .2s;
+}
+
+.blog-layout a:hover {
+    color: var(--accent);
+}
+
+.blog-layout ul {
+    list-style-type: disc;
+    padding-inline-start: 1rem;
+}
+
+.blog-layout ol {
+    list-style-type: decimal;
+    padding-inline-start: 1rem;
+}
+
+.blog-layout {
+
+    h1:not(:first-child),
+    h2:not(:first-child),
+    h3:not(:first-child),
+    h4:not(:first-child),
+    h5:not(:first-child),
+    h6:not(:first-child) {
+        margin-block-start: 1em;
+    }
+}
