--- a/src/styles/blogList.css
+++ b/src/styles/blogList.css
@@ -17,6 +17,7 @@
         a {
             text-decoration: none;
             color: var(--text);
+            z-index: 1;
         }
 
         .post-type {
@@ -51,11 +52,18 @@
             border-radius: 1rem;
             background-color: hsl(0 0% 100% / 0.05);
             border-top: 1px solid hsl(0 0% 100% / 0.1);
-            opacity: 1;
-            z-index: 1;
             transition: opacity 0.3s ease-in-out;
+            pointer-events: none;
+        }
+
+    }
+
+    @media screen and (max-width: 700px) {
+        & {
+            grid-template-columns: 1fr;
         }
     }
+
 }
 
 .blog-layout ul.tag-list {
