adds post status and updatedAt to post data
- updates all posts and snippets with new data
- adds dayjs extensions
- small updates to some content

--- a/src/components/Snippets/Snippet.astro
+++ b/src/components/Snippets/Snippet.astro
@@ -7,7 +7,7 @@ type Props = {
 
 const {
   snippet: {
-    data: { title, publishedAt, tags },
+    data: { title, publishedAt, updatedAt, tags },
     slug,
   },
 } = Astro.props;
