--- a/src/pages/about/projects/bg-data-tools.astro
+++ b/src/pages/about/projects/bg-data-tools.astro
@@ -26,18 +26,30 @@ import { Icon } from "astro-icon/components";
     </div>
 
     <p>
-      While working on another project I needed a way to check whether some text
-      was a valid CSS color. I was working with a variety of colors, including
-      oklch. I couldn't find anything that included oklch in their validations.
+      Since 2009 I've used BoardGameGeek to record every game I've
+      played...okay, almost every game. At first it was only that I had played a
+      game. Then it included who I played with. Then I added where we were and
+      who won.It has turned into quite a bit of data on my game plays (over 3000
+      games played since 2009).
     </p>
 
     <p>
-      "Just a little regex should do," I thought. I ended up going down a rabbit
-      hole of all the variations for each type of CSS color: named, hex, rgb,
-      hsl, lch, etc. This was the product of that rabbit hole.
+      One day one of my kids said, "Dad always wins." It got me wondering, "How
+      frequently does each of us win?" There was no easy way for me to answer
+      that question. However, BGG has a free API. So I set out to build an app
+      to answer that question and other weird questions I might have.
     </p>
 
-    <p>Looking at just hsl, there are a bunch of valid patterns.</p>
+    <p>
+      When playing cooperative games with my family, how often do we win or
+      lose? What games have I played with Mike? Have I introduced Tami to Sky
+      Team yet? What did I play last weekend again?
+    </p>
+
+    <p>
+      Over time I built it be my go to tool for all questions about my gaming
+      history.
+    </p>
   </div>
 </FullScreenLayout>
 
