--- a/src/pages/snippets/[slug].astro
+++ b/src/pages/snippets/[slug].astro
@@ -3,9 +3,12 @@ import type { GetStaticPaths } from "astro";
 import { getCollection, type CollectionEntry } from "astro:content";
 import FullScreenLayout from "@layouts/FullScreenLayout.astro";
 import BlogLayout from "@layouts/BlogLayout.astro";
+import dayjs from "@lib/extendedDayjs";
+import type { utc } from "dayjs";
 
 export const getStaticPaths = (async () => {
   const snippets = await getCollection("snippets");
+  console.log(snippets);
   return snippets.map((snippet: CollectionEntry<"snippets">) => ({
     params: {
       slug: snippet.slug,
@@ -23,10 +26,19 @@ type Props = {
 };
 const { snippet } = Astro.props;
 const { Content } = await snippet.render();
+
+console.log(snippet.data);
+
+const sameUpdatePublishDates =
+  dayjs(snippet.data.publishedAt).format("YYYYMMDD") ===
+  dayjs(snippet.data.updatedAt).format("YYYYMMDD");
+const dateType = sameUpdatePublishDates ? "Published" : "Updated";
+const date = dayjs(snippet.data.updatedAt).utc().format("ll");
 ---
 
 <FullScreenLayout title={snippet.data.title || "Snippets"}>
   <BlogLayout>
     <Content />
+    <p class="text-right text-base">{dateType} {date}</p>
   </BlogLayout>
 </FullScreenLayout>
