build: updates frontmatter for unused unsocial  types to allow build to be completed

--- a/src/components/Snippets/Snippet.astro
+++ b/src/components/Snippets/Snippet.astro
@@ -7,7 +7,7 @@ type Props = {
 
 const {
   snippet: {
-    data: { title, publishedAt, updatedAt, tags },
+    data: { title, publishedAt, tags },
     slug,
   },
 } = Astro.props;
