--- a/src/components/unsocial/Article.astro
+++ b/src/components/unsocial/Article.astro
@@ -1,19 +1,19 @@
 ---
 import { UnsocialSchema } from "@content/config.ts";
 import { z } from "astro:content";
-import dayjs from "dayjs";
+// import dayjs from "dayjs";
 
 type Data = z.infer<typeof UnsocialSchema>;
 type Props = { data: Data };
 
 const { data } = Astro.props;
-console.log("DATA", data);
-const title = data.title,
-  publishedAt = data.publishedAt,
-  image = data.image,
-  description = data.description,
-  tags = data.tags;
-const date = dayjs(publishedAt).format("MMM D, YYYY");
+// console.log("DATA", data);
+const title = data.title;
+// publishedAt = data.publishedAt,
+// image = data.image,
+// description = data.description,
+// tags = data.tags;
+// const date = dayjs(publishedAt).format("MMM D, YYYY");
 ---
 
 <h1>{title}</h1>
