--- a/src/styles/blogLayout.css
+++ b/src/styles/blogLayout.css
@@ -198,4 +198,29 @@ p:has(img) {
     margin-bottom: 2rem;
 }
 
-
+.blog-layout pre {
+    position: relative;
+}
+.blog-layout pre .copy-button {
+    position: absolute;
+    top: .25rem;
+    right: .25rem;
+    background: hsl(0 0% 100% / .1);
+    color: var(--text);
+    padding: .25rem .5rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.2s;
+    z-index: 1;
+    &:hover {
+        background: hsl(0 0% 100% / .25);
+    }
+    &:active {
+        background: var(--accent-active);
+    }
+    &:focus {
+        outline: 2px solid var(--accent);
+        outline-offset: 2px;
+    }   
+}
