--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -154,9 +154,18 @@ code {
         monospace;
 }
 
-p>code {
-    background: #24292e;
-    padding: .25rem .5rem;
+
+code {
+    background-color: #24292e;
+    padding: 0 .5rem;
+}
+
+pre {
+
+    > code {
+        padding: 0;
+        background: transparent
+    }
 }
 
 h1,
