build: updates the data loading so it uses the astro v5 Content Layer API

--- a/src/components/Snippets/Snippet.astro
+++ b/src/components/Snippets/Snippet.astro
@@ -8,13 +8,13 @@ type Props = {
 const {
   snippet: {
     data: { title, publishedAt, tags },
-    slug,
+    id,
   },
 } = Astro.props;
 const date = new Date(publishedAt);
 ---
 
-<a class="snippet" href={`/snippets/${slug}`}>
+<a class="snippet" href={`/snippets/${id}`}>
   <h2>{title}</h2>
   <p>{date.toLocaleDateString()}</p>
   <ul>
