--- a/src/components/unsocial/Photo.astro
+++ b/src/components/unsocial/Photo.astro
@@ -1,5 +1,5 @@
 ---
-import { UnsocialSchema } from "@content/config.ts";
+import { UnsocialSchema } from "@content.config";
 import { z } from "astro:content";
 import dayjs from "dayjs";
 
