--- a/src/pages/snippets/[id].astro
+++ b/src/pages/snippets/[id].astro
@@ -1,6 +1,6 @@
 ---
 import type { GetStaticPaths } from "astro";
-import { getCollection, type CollectionEntry } from "astro:content";
+import { render, getCollection, type CollectionEntry } from "astro:content";
 import FullScreenLayout from "@layouts/FullScreenLayout.astro";
 import BlogLayout from "@layouts/BlogLayout.astro";
 import dayjs from "@lib/extendedDayjs";
@@ -10,7 +10,7 @@ export const getStaticPaths = (async () => {
 
   return snippets.map((snippet: CollectionEntry<"snippets">) => ({
     params: {
-      slug: snippet.slug,
+      id: snippet.id,
     },
     props: {
       snippet,
@@ -18,13 +18,11 @@ export const getStaticPaths = (async () => {
   }));
 }) satisfies GetStaticPaths;
 
-// const { slug } = Astro.params;
-
 type Props = {
   snippet: CollectionEntry<"snippets">;
 };
 const { snippet } = Astro.props;
-const { Content } = await snippet.render();
+const { Content } = await render(snippet);
 
 const sameUpdatePublishDates =
   dayjs(snippet.data.publishedAt).format("YYYYMMDD") ===
