--- a/src/pages/unsocial/[id].astro
+++ b/src/pages/unsocial/[id].astro
@@ -1,6 +1,6 @@
 ---
 import type { GetStaticPaths } from "astro";
-import { getCollection, type CollectionEntry } from "astro:content";
+import { render, getCollection, type CollectionEntry } from "astro:content";
 import FullScreenLayout from "@layouts/FullScreenLayout.astro";
 import BlogLayout from "@layouts/BlogLayout.astro";
 import PostTypeSwitch from "@components/unsocial/PostTypeSwitch.astro";
@@ -11,7 +11,7 @@ export const getStaticPaths = (async () => {
   return posts.map((post: CollectionEntry<"unsocial">) => {
     const pathData = {
       params: {
-        slug: post.slug,
+        id: post.id,
       },
       props: {
         post,
@@ -27,7 +27,7 @@ type Props = {
 };
 
 const { post } = Astro.props;
-const { Content } = await post.render();
+const { Content } = await render(post);
 ---
 
 <FullScreenLayout title={post.data.title || "Snippets"}>
