fixes the link to linkedin

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const social = [
   },
   {
     name: "LinkedIn",
-    url: "https://www.linkedin.com/in/claytoningalls",
+    url: "https://www.linkedin.com/in/clayton-ingalls",
     icon: "brand-linkedin",
   },
 ];
