adds rss icon link to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,11 @@ import { Icon } from "astro-icon/components";
 import VisibleGrid from "./VisibleGrid.astro";
 const social = [
   {
+    name: "RSS Feed",
+    url: "/rss.xml",
+    icon: "rss",
+  },
+  {
     name: "GitHub",
     url: "https://www.github.com/zapbampow",
     icon: "brand-github",
